# llmonpy

./: CNAME  LICENSE  MANIFEST.in  README.md  index.md  install.txt  pyproject.toml  upgrade.txt
artifacts/: evaluation_prompt.txt  name_simplified.txt  naming_prompt.txt  steps_prompts.txt  string_template.jsone  string_template.md
artifacts/json_test_data/: encoded_nested_json.json  encoding_test.json  missing_quote_escape.json
artifacts/jsony_test_data/: jsony_input.txt
artifacts/test_requests/: string_template.jsone
data/: training_data.json
docs/: sample_training_data.json  training_data.md
ratellmiter_logs/: 1728844407.jsonl
src/debugger/ui/llmonpy-debugger/: package-lock.json  package.json
src/example/: eval_generator.py  steps_prompt.py  test_cycle.py  test_prompts.py  test_tourney.py
src/experiments/classifier/: classifier.py  prompt.txt
src/experiments/judge_bench/: cola.py
src/experiments/judge_bench/data/: cola_examples.json
src/experiments/judgement_day/: create_test_data.py  eval_test_data.json  llmonpy_ranker.py  llmonpy_validator.py  run_test.py  test_question.py
src/experiments/story_writer/support/: attributes.md  pipeline.md  strategies_for_2nd_grade.md
src/experiments/threaded_nian/: results.md  threaded_nian.py
src/experiments/threaded_nian/prompts/: 120k_spread_q1.txt  120k_spread_q2.txt  120k_spread_q3.txt  120k_spread_q4.txt  120k_spread_q5.txt  chained_limericks_and_questions.txt
src/experiments/title_write/: r1.txt  title_write.py  tune_eval.py
src/llmonpy/: __init__.py  config.py  generate_eval.py  jsony.py  llm_client.py  llmon_pypeline.py  llmonpy_cli.py  llmonpy_execute.py  llmonpy_gar.py  llmonpy_prompt.py  llmonpy_step.py  llmonpy_team.py  llmonpy_tournament.py  llmonpy_trace_store.py  llmonpy_util.py  make_ramp.py  prompt.py  rate_llmiter.py  scratch.txt  store_backup.py  system_services.py  system_startup.py  trace_log.py
src/llmonpy/api/: api.py  api_config.py  api_system_startup.py  sys_path.py
src/llmonpy/api/static/: index.html
src/llmonpy/api/static/assets/: Default-B4QAsJSE.js  Default-CC4JiX5i.js  Default-DlIij-Ys.css  Default-DlJJrENM.js  QbawaViewer-BqNGo4yt.js  QbawaViewer-CpjkQOhF.js  QbawaViewer-DQOi_380.js  TraceViewer-Bb0PQshy.js  TraceViewer-CaqaGAHF.js  TraceViewer-DnVhxMZ3.js  VAvatar-BBVmGQTS.js  VAvatar-DDYaxdrs.js  (+11 more)
src/llmonpy/example/: read_tourney_result_file.py  steps_prompt.py  test_cycle.py  test_gar.py  test_prompts.py  test_rate_limiter.py  test_tourney.py
src/samples/: test_cycle.py  test_prompts.py  test_tourney.py
src/ui/api/: api.py  api_app.py  api_config.py  api_system_startup.py
src/ui/ui/llmonpy-debugger/: .env  .env.development  .gitignore  README.md  index.html  lib.links  package-lock.json  package.json
src/ui/web/llmonpy-debugger/: vite.config.mjs
(+24 files in other folders)
